Prevent horizontal scrolling for slide-transitioning objects

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,6 +16,7 @@
 
   > div:first-child {
     display: grid;
+    overflow-x: hidden;
     grid-template-rows: auto auto 1fr auto;
     min-height: 100%;
   }
